# bakery_scanner_train_hub

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start-dev.ps1
backend/app/: __init__.py  config.py  main.py  static.py
backend/app/api/: catalog.py  dependencies.py  errors.py  images.py
backend/app/application/: catalog.py  image_library.py  image_upload.py
backend/app/domain/: catalog.py  images.py
backend/app/infrastructure/: catalog_repository.py  database.py  file_storage.py  image_processor.py  image_repository.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_catalog.py  0002_images.py
backend/tests/: conftest.py  test_health.py  test_spa_fallback.py  test_startup_contract.py
backend/tests/api/: test_catalog_api.py  test_images_api.py
backend/tests/application/: test_catalog.py  test_image_upload.py
backend/tests/infrastructure/: test_database.py  test_file_storage.py  test_image_processor.py  test_image_schema.py
docs/superpowers/plans/: 2026-07-15-documentation-foundation.md  2026-07-15-image-management-foundation-catalog.md  2026-07-15-image-management-implementation-roadmap.md  2026-07-15-image-management-labeling-editor.md  2026-07-15-image-management-operations-release.md  2026-07-15-image-management-upload-library.md  2026-07-20-mpo-jpeg-upload.md
docs/superpowers/specs/: 2026-07-15-bakery-image-management-design.md  2026-07-15-image-management-ui-design.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: design-tokens.test.ts  index.css  main.tsx
(+42 files in other folders)
